--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -4,16 +4,19 @@
   align-items: center;
   flex-direction: column;
 
-  font-size: 20px;
+  margin-bottom: 15px;
+  font-size: 30px;
   font-weight: 700;
 }
 
 .input {
   margin-top: 10px;
-  padding: 8px 15px;
+  padding: 10px 15px;
 
-  font-size: 18px;
+  font-size: 24px;
 
+  border: 2px solid #ffb700;
+  border-radius: 10px;
   color: #ffb700;
   background-color: #4b5ed7;
 }
