--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -36,7 +36,8 @@
 
 .notification {
   padding: 15px;
-  border: 1px solid #ffb700;
+  border: 2px solid #ffb700;
+  border-radius: 10px;
   color: #ffb700;
   background-color: #4b5ed7;
   font-size: 24px;
