--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,9 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #e5eaf0;
+  background-color: #535da1;
   color: #000;
   line-height: 1.5;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
 }
 
 ul {
